samples/raylib.h

#define PI 3.14159265358979323846f
#define DEG2RAD (PI / 180.0f)
#define RAD2DEG (180.0f / PI)
#define MAX_TOUCH_POINTS 10 // Maximum number of touch points supported
// Shader and material limits
#define MAX_SHADER_LOCATIONS 32 // Maximum number of predefined locations stored in shader struct
#define MAX_MATERIAL_MAPS 12    // Maximum number of texture maps stored in shader struct
// Vector2 type
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
// Vector3 type
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
// Vector4 type
typedef struct Vector4
{
    float x;
    float y;
    float z;
    float w;
} Vector4;
// Quaternion type, same as Vector4
typedef Vector4 Quaternion;
// Matrix type (OpenGL style 4x4 - right handed, column major)
typedef struct Matrix
{
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
// Color type, RGBA (32bit)
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
// Rectangle type
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
// Image type, bpp always RGBA (32bit)
// NOTE: Data stored in CPU memory (RAM)
typedef struct Image
{
    void *data;  // Image raw data
    int width;   // Image base width
    int height;  // Image base height
    int mipmaps; // Mipmap levels, 1 by default
    int format;  // Data format (PixelFormat type)
} Image;